2007-05-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkCanvPs.c (TkCanvPostscriptCmd): 
	* generic/tkOption.c (GetDefaultOptions): 
	* unix/tkUnixRFont.c (TkpGetFontAttrsForChar, InitFont) 
	(TkpGetFontFamilies, TkpGetSubFonts): 
	* unix/tkUnixSend.c (TkpTestsendCmd): Squelch warnings from GCC type
	aliasing. [Bug 1711985]

2007-04-29  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in: fix for default case in tk debug build detection.
	* unix/configure: autoconf-2.59

2007-04-27  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c(TagOptionSpecs): Use TK_OPTION_STRING
	instead of TK_OPTION_FONT to avoid resource leak in tag management.

2007-04-26  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSXTheme.c: Merged OFFSET_RECT processing into 
	BoxToRect(); factored out PatternOrigin; resynchronized
	with Tile codebase.

2007-04-26  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a6 TAGGED FOR RELEASE ***

	* unix/Makefile.in (dist): correct tests/ttk glob inclusion

2007-04-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in (dist): add tests/ttk dir to src dist

	* unix/tkUnixMenubu.c (TkpDisplayMenuButton): init width/height to 0

2007-04-25  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in (dist): add macosx/*.xcconfig files to src dist;
	copy license.terms to dist macosx dir; fix autoheader bits.

2007-04-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in (dist): add ttk bits to src dist

	* tests/font.test (font-46.[12]): correct listification of result

2007-04-23  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkCanvas.c:	allow -selectforeground option to be None; add
	* generic/tkCanvText.c:	fallback to fgColor when selFgColor is None
	* generic/tkEntry.c:	(new default on aqua to match native L&F).
	* generic/tkListbox.c:
	* generic/tkText.c:

	* generic/tkCanvas.c:	   add support for bypassing all of Tk's double